Adds EA job description

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Resume</h2>
+            Please <a href="mailto:crocha@uwaterloo.ca" target="_blank">connect</a> with me to view my full resume
           </div>
 
           <div class="row">
@@ -290,24 +291,21 @@
                 </h3>
                 <h4>Software Engineer Intern</h4>
                 <p><em>Sept 2023-Dec 2023</em></p>
-                <!-- <ul>
+                <ul>
                   <li>
-                    Worked on a secure admin reports page with robust <highlight>user authentication </highlight> protocols and aided in the successful launch of popular new features, such as a main admin dashboard on the Data Insights and Security team.
+                    Built a <highlight>CLI tool</highlight> to replicate game compilation bugs through dynamic <highlight>Azure virtual machine</highlight> provisioning.
                   </li>
-                </ul> -->
-                <!-- <div>
-                  <h6 class="language">Go</h6>
-                  <h6 class="language">TypeScript</h6>
-                  <h6 class="language">JavaScript</h6>
-                  <h6 class="language">SQL</h6>
-                  <h6 class="language">Rust</h6>
-                  <h6 class="framework">React</h6>
+                </ul>
+                <div>
+                  <h6 class="language">Python</h6>
+                  <h6 class="language">Bash</h6>
+                  <h6 class="language">Powershell</h6>
                   <h6 class="tool">Git</h6>
-                  <h6 class="tool">AWS</h6>
-                  <h6 class="tool">Docker</h6>
-                  <h6 class="tool">Apache Kafka</h6>
-                  <h6 class="tool">DataDog</h6>
-                </div> -->
+                  <h6 class="tool">Microsoft Azure</h6>
+                  <h6 class="tool">Terraform</h6>
+                  <h6 class="tool">Artifactory</h6>
+                  <h6 class="tool">Perforce</h6>
+                </div>
               </div>
               <div class="resume-item">
                 <h3>
@@ -658,7 +656,7 @@
             </div>
           </section>
 
-          <section id="portfolio-details" class="portfolio-details new3">
+          <!-- <section id="portfolio-details" class="portfolio-details new3">
             <div class="container new">
               <div class="row mt-1">
                 <div class="col-lg-4 new2">
@@ -692,7 +690,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
 
           <section id="portfolio-details" class="portfolio-details new3">
             <div class="container new">
@@ -721,8 +719,8 @@
                     <h2>Student Activist</h2>
                     <p>
                       As a youth activist and aspiring engineer, I've been
-                      involved in a range of projects including starring in a
-                      YTV docuseries, CitizenKid, leading STEM workshops in
+                      involved in a range of projects including presenting my own TEDx Talk, starring in a
+                      YTV docuseries, leading STEM workshops in
                       elementary schools, and protesting for environmental
                       policies.
                     </p>
