Add book subpage

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           I am a
           <span
             class="typed"
-            data-typed-items="Software Engineer,TEDx speaker,Lifelong Learner"
+            data-typed-items="Software Engineer, Lifelong Learner"
           ></span>
         </p>
         <div class="social-links">
@@ -164,8 +164,8 @@
                 projects to inspire growth in the tech field.
                 <br /><br /><br /><br />
                 Now, I'm an innovative Software Engineering student at the
-                University of Waterloo. I'm currently seeking Summer 2024 (May
-                2024 - Aug 2024) software engineer internship opportunities.
+                University of Waterloo. I'm currently seeking Winter 2025 (January 2025 - April 2025) or Summer 2025 (May
+                2025 - Aug 2025) software engineer internship opportunities.
 
                 <!-- <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
               <li>
@@ -279,6 +279,34 @@
           <div class="row">
             <div class="col-lg-6">
               <h3 class="resume-title">Experience</h3>
+              <div class="resume-item">
+                <h3>
+                  <a href="https://www.audible.com/" target="_blank"
+                    ><img
+                      src="assets/img/resume/audible.png"
+                      class="img-circle"
+                      alt=""
+                  /></a>
+                  Audible
+                </h3>
+                <h4>Software Developer Engineer Intern</h4>
+                <p><em>May 2024-Aug 2024</em></p>
+                <!-- <ul>
+                  <li>
+                    Assisted in crafting a feature that tracks user activity and sends reminders to complete purchases, boosting revenue by encouraging purchase completion.
+                  </li>
+                </ul> -->
+                <!-- <div>
+                  <h6 class="language">Java</h6>
+                  <h6 class="language">hm</h6>
+                  <h6 class="language">hm</h6>
+                  <h6 class="tool">Amazon Web Services</h6>
+                  <h6 class="tool">Datapath</h6>
+                  <h6 class="tool">Spring</h6>
+                  <h6 class="tool">JUnit</h6>
+                  <h6 class="tool">hm</h6>
+                </div> -->
+              </div>
               <div class="resume-item">
                 <h3>
                   <a href="https://www.ea.com/en-ca" target="_blank"
@@ -1153,7 +1181,7 @@
     <footer id="footer">
       <div class="container">
         <h3>Charlene Rocha</h3>
-        <p>Software Engineer, TEDx speaker, & Lifelong Learner</p>
+        <p>Software Engineering student at UWaterloo</p>
         <div class="social-links">
           <a href="mailto:crocha@uwaterloo.ca" target="_blank" class="envelope"
             ><i class="bx bx-envelope"></i
