--- a/index.html
+++ b/index.html
@@ -442,13 +442,21 @@
                   University of Waterloo
                 </h3>
                 <h4>Honours Bachelor of Software Engineering</h4>
-                <p><em>Sept 2021-Apr 2025</em></p>
+                <p><em>Sept 2021-Apr 2026</em></p>
                 <ul>
                   <li>
-                    <highlight>Coursework</highlight>: Programming Principles, Data Structures and
-                    Algorithms, Data Abstraction and Implementation, Foundations
-                    of Sequential Programs, Database Management, Combinatorics.
-                  </li>
+                    <highlight>Coursework</highlight>
+                    <ul>
+                      <li>Data Structures and Algorithms</li>
+                      <li>Foundations of Sequential Programs</li>
+                      <li>Database Management</li>
+                      <li>Operating Systems</li>
+                      <li>Software Testing and Quality Assurance</li>
+                      <li>Concurrent & Parallel Programs</li>
+                      <li>Software Design & Architectures</li>
+                      <li>Computer Networks</li>
+                    </ul>
+                    </li>
                   <li>
                     Participated as the Internal Affairs Officer of
                     <highlight>UW BluePrint</highlight> and
