--- a/book/index.html
+++ b/book/index.html
@@ -148,7 +148,7 @@
       <!-- ================= Book ================ -->
       <!-- ======================================== -->
 
-      <section id="about" class="about">
+      <div id="about" class="about">
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-8 pt-4 pt-lg-0 content">
@@ -222,7 +222,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </main>
     <!-- End #main -->
 
