--- a/book/index.html
+++ b/book/index.html
@@ -174,9 +174,15 @@
                     <i class="bi bi-chevron-right"></i>
                     <span
                       ><a
+                        href="https://www.amazon.ca/You-Can-Activist-Strengths-Difference/dp/1525308408"
+                        target="_blank"
+                        >Amazon CA</a
+                      >
+                      <a
                         href="https://www.amazon.com/You-Can-Activist-Difference-CitizenKid/dp/1525308408"
                         target="_blank"
-                        >Amazon</a
+                      >
+                        (US)</a
                       ></span
                     >
                   </li>
@@ -207,8 +213,8 @@
                         href="https://www.walmart.com/ip/CitizenKid-You-Can-Be-an-Activist-How-to-Use-Your-Strengths-and-Passions-to-Make-a-Difference-Paperback-9781525308406/5315669180"
                         target="_blank"
                         >Walmart</a
-                      ></span
-                    >
+                      >
+                    </span>
                   </li>
                   <li>
                     <span></span>
