--- a/book/index.html
+++ b/book/index.html
@@ -19,6 +19,18 @@
       charlene rocha personal website, charlene rocha online portfolio, charlene rocha activism, charlene rocha toronto, charlenerocha, charlenerocha.com, charlenerocha.ca"
     />
 
+    <style>
+      .laptop_main {
+        margin: 10px 20px;
+      }
+
+      @media only screen and (min-width: 500px) {
+        .laptop_main {
+          margin: 50px;
+        }
+      }
+    </style>
+
     <!-- Favicons -->
     <link href="../assets/img/favicon.png" rel="icon" />
     <title>Charlene Rocha</title>
@@ -143,7 +155,7 @@
     </section> -->
     <!-- End Hero -->
 
-    <main id="main" style="margin: 50px">
+    <main id="main" class="laptop_main">
       <!-- ======================================== -->
       <!-- ================= Book ================ -->
       <!-- ======================================== -->
@@ -224,7 +236,7 @@
             </div>
 
             <div class="col-md-3">
-              <img src="cover.png" class="img-fluid" alt="" />
+              <img src="cover.png" class="img-fluid" width="256" />
             </div>
           </div>
         </div>
