--- a/book/index.html
+++ b/book/index.html
@@ -74,7 +74,7 @@
     <link href="../assets/css/style.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body style="background-color: #ffede0">
     <!-- ======================================== -->
     <!-- ============== NAVIGATION ============== -->
     <!-- ======================================== -->
