--- a/book/index.html
+++ b/book/index.html
@@ -164,7 +164,7 @@
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>Hey there!</h3>
+              <h3 style="color: #c2454f">Hey there!</h3>
               <p>
                 Excited to share my book coming out on September 3rd! Preorder
                 out now on these sites & more :)
