--- a/book/index.html
+++ b/book/index.html
@@ -178,6 +178,7 @@
                       ><a
                         href="https://www.kidscanpress.com/product/you-can-be-an-activist/"
                         target="_blank"
+                        style="text-decoration: underline"
                         >Kids Can Press</a
                       ></span
                     >
@@ -188,14 +189,18 @@
                       ><a
                         href="https://www.amazon.ca/You-Can-Activist-Strengths-Difference/dp/1525308408"
                         target="_blank"
+                        style="text-decoration: underline"
                         >Amazon CA</a
                       >
+                      (
                       <a
                         href="https://www.amazon.com/You-Can-Activist-Difference-CitizenKid/dp/1525308408"
                         target="_blank"
+                        style="text-decoration: underline"
                       >
-                        (US)</a
-                      ></span
+                        US</a
+                      >
+                      )</span
                     >
                   </li>
                   <li>
@@ -204,6 +209,7 @@
                       ><a
                         href="https://www.indigo.ca/en-ca/you-can-be-an-activist-how-to-use-your-strengths-and-passions-to-make-a-difference/9781525308406.html"
                         target="_blank"
+                        style="text-decoration: underline"
                         >Indigo</a
                       ></span
                     >
@@ -214,6 +220,7 @@
                       ><a
                         href="https://www.barnesandnoble.com/w/you-can-be-an-activist-charlene-rocha/1144553735"
                         target="_blank"
+                        style="text-decoration: underline"
                         >Barnes & Noble</a
                       ></span
                     >
@@ -224,6 +231,7 @@
                       ><a
                         href="https://www.walmart.com/ip/CitizenKid-You-Can-Be-an-Activist-How-to-Use-Your-Strengths-and-Passions-to-Make-a-Difference-Paperback-9781525308406/5315669180"
                         target="_blank"
+                        style="text-decoration: underline"
                         >Walmart</a
                       >
                     </span>
