--- a/book/index.html
+++ b/book/index.html
@@ -243,7 +243,14 @@
               </div>
             </div>
 
-            <div class="col-md-3">
+            <div
+              class="col-md-3"
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
               <img src="cover.png" class="img-fluid" width="256" />
             </div>
           </div>
@@ -256,26 +263,26 @@
     <!-- ================ FOOTER ================ -->
     <!-- ======================================== -->
 
-    <!-- <footer id="footer">
-      <div class="container">
-        <h3>Charlene Rocha</h3>
-        <p>Software Engineer, TEDx speaker, & Lifelong Learner</p>
-        <div class="social-links">
-          <a
-            href="../mailto:crocha@uwaterloo.ca"
-            target="_blank"
-            class="envelope"
-            ><i class="bx bx-envelope"></i
-          ></a>
-          <a
-            href="../https://www.linkedin.com/in/charlenerochaa/"
-            target="_blank"
-            class="linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
-        </div>
+    <footer id="footer" style="background-color: #ffede0">
+      <!-- <div class="container"> -->
+      <!-- <h3>Charlene Rocha</h3> -->
+      <!-- <p>Software Engineer, TEDx speaker, & Lifelong Learner</p> -->
+      <div class="social-links">
+        <a href="https://www.charlenerocha.com/" target="_blank" class="globe"
+          ><i class="bx bx-globe"></i
+        ></a>
+        <a href="mailto:charocha03@gmail.com" target="_blank" class="envelope"
+          ><i class="bx bx-envelope"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/charlenerochaa/"
+          target="_blank"
+          class="linkedin"
+          ><i class="bx bxl-linkedin"></i
+        ></a>
+        <!-- </div> -->
       </div>
-    </footer> -->
+    </footer>
     <!-- End Footer -->
 
     <!-- Vendor JS Files -->
