Adds Audible description

--- a/index.html
+++ b/index.html
@@ -291,21 +291,23 @@
                 </h3>
                 <h4>Software Developer Engineer Intern</h4>
                 <p><em>May 2024-Aug 2024</em></p>
-                <!-- <ul>
+                <ul>
                   <li>
-                    Assisted in crafting a feature that tracks user activity and sends reminders to complete purchases, boosting revenue by encouraging purchase completion.
+                    Developed a <highlight>concurrency-safe lock mechanism</highlight> for shopping carts, decreasing transaction conflicts and ensuring that only one order is processed at a time in a high-traffic e-commerce environment
                   </li>
-                </ul> -->
-                <!-- <div>
+                  <li>
+                    Crafted a feature that tracks user activity and sends reminders to complete purchases, boosting revenue by encouraging purchase completion.
+                  </li>
+                </ul>
+                <div>
                   <h6 class="language">Java</h6>
-                  <h6 class="language">hm</h6>
-                  <h6 class="language">hm</h6>
+                  <h6 class="language">Ruby</h6>
+                  <h6 class="language">Datapath</h6>
+                  <h6 class="framework">Spring</h6>
+                  <h6 class="framework">Hibernate</h6>
                   <h6 class="tool">Amazon Web Services</h6>
-                  <h6 class="tool">Datapath</h6>
-                  <h6 class="tool">Spring</h6>
-                  <h6 class="tool">JUnit</h6>
-                  <h6 class="tool">hm</h6>
-                </div> -->
+                  <h6 class="tool">AWS Cloud Development Kit</h6>
+                </div>
               </div>
               <div class="resume-item">
                 <h3>
