Book msg update

--- a/book/index.html
+++ b/book/index.html
@@ -166,8 +166,7 @@
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3 style="color: #c2454f">Hey there!</h3>
               <p>
-                Excited to share my book coming out on September 3rd! Order out
-                now on these sites & more :)
+                Excited to share my book is out now! Order on these sites or at your favourite local bookstore.
               </p>
 
               <div>
