update resume points

--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
                 projects to inspire growth in the tech field.
                 <br /><br /><br /><br />
                 Now, I'm an innovative Software Engineering student at the
-                University of Waterloo. I'm currently seeking Winter 2025 (January 2025 - April 2025) or Summer 2025 (May
-                2025 - Aug 2025) software engineer internship opportunities.
+                University of Waterloo. I'm currently seeking <b>2026 New Grad Software Engineer</b> positions.
 
                 <!-- <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
               <li>
@@ -279,6 +278,56 @@
           <div class="row">
             <div class="col-lg-6">
               <h3 class="resume-title">Experience</h3>
+              <div class="resume-item">
+                <h3>
+                  <a href="https://google.com/" target="_blank"
+                    ><img
+                      src="assets/img/resume/google.png"
+                      class="img-circle"
+                      alt=""
+                  /></a>
+                  Google
+                </h3>
+                <h4>Software Engineer Intern</h4>
+                <p><em>May 2025-Present</em></p>
+                <!-- <ul>
+                  <li>
+                    Designed a user-friendly avatar for a TeleRehab app, promoting neurorehabilitation accessibility for stroke survivors.
+                  </li>
+                </ul> -->
+                <!-- <div>
+                  <h6 class="language">Kotlin</h6>
+                  <h6 class="language">Java</h6>
+                  <h6 class="language">C++</h6>
+                  <h6 class="tool">Unity</h6>
+                  <h6 class="tool">Android SDK</h6>
+                </div> -->
+              </div>
+              <div class="resume-item">
+                <h3>
+                  <a href="https://datadog.com/" target="_blank"
+                    ><img
+                      src="assets/img/resume/datadog.png"
+                      class="img-circle"
+                      alt=""
+                  /></a>
+                  Datadog
+                </h3>
+                <h4>Software Engineer Intern</h4>
+                <p><em>Jan 2025-Apr 2025</em></p>
+                <ul>
+                  <li>
+                    Led end-to-end development of a scalable Go-based <b>dependency tracker</b> for Datadog GitHub repos, automating visibility into 14K+ package records per run.                  </li>
+                </ul>
+                <div>
+                  <h6 class="language">Go</h6>
+                  <h6 class="language">SQL</h6>
+                  <h6 class="tool">Bazel</h6>
+                  <h6 class="tool">Protocol Buffers</h6>
+                  <h6 class="tool">Temporal</h6>
+                  <h6 class="tool">gRPC APIs</h6>
+                </div>
+              </div>
               <div class="resume-item">
                 <h3>
                   <a href="https://www.audible.com/" target="_blank"
@@ -403,7 +452,7 @@
                   <h6 class="tool">Maven</h6>
                 </div>
               </div>
-              <div class="resume-item">
+              <!-- <div class="resume-item">
                 <h3>
                   <a href="https://iregained.ca/" target="_blank"
                     ><img
@@ -427,7 +476,7 @@
                   <h6 class="tool">Unity</h6>
                   <h6 class="tool">Android SDK</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="col-lg-6">
               <h3 class="resume-title">Education</h3>
@@ -499,7 +548,7 @@
                 </div>
               </div>
               <div class="resume-item">
-                <h3>Diversity in Tech Activist</h3>
+                <h3>Women in Tech Activist</h3>
                 <p><em>Mar 2017-Now</em></p>
                 <ul>
                   <li>
