adding social media bubbles

--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dynamic Shelves - React App</title>
+    <title>Charlene's Little Corner</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="page-title">charlene's little<br/>corner</div>
     <div id="root"></div>
 
     <!-- React and ReactDOM from CDN -->
