--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="page-title">charlene's little<br/>corner</div>
+    <div class="sparkles-overlay"></div>
+    <div class="page-title">charlene's little<br />corner</div>
     <div id="root"></div>
 
     <!-- React and ReactDOM from CDN -->
@@ -25,6 +26,9 @@
     ></script>
     <!-- Babel Standalone for JSX transformation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- Map Pins Configuration -->
+    <script src="MapPins.js"></script>
 
     <!-- Our React App -->
     <script type="text/babel" src="App.js"></script>
