Add title and logo

--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Charlene's Little Corner</title>
+    <title>charlene's shelves</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="assets\plushie\logo.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
