Update personal website pieces

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           I am a
           <span
             class="typed"
-            data-typed-items="Software Engineer, Lifelong Learner"
+            data-typed-items="Software Engineer, lifelong learner, tech-for-good advocate, TEDx speaker and author"
           ></span>
         </p>
         <div class="social-links">
@@ -149,21 +149,29 @@
             <p></p>
           </div>
 
-          <div class="row">
-            <div class="col-md-3" style="margin-right: 40px">
-              <img src="assets/img/profile-img.jpg" class="img-fluid img-circle" alt="" />
-            </div>
-            <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <!-- <div class="row"> -->
+            <!-- <div class="col-sm-2" style="margin-right: 40px;">
+              <img
+                src="assets/img/me.png"
+                class="img-fluid"
+                alt=""
+                style="max-width: 100%;"
+              />
+            </div> -->
+            <!-- <div class="col-lg-8 pt-4 pt-lg-0 content"> -->
+            <div class="content" style="padding:20px;">
               <h3>Who Am I?</h3>
               <p>
                 <br />
-                After creating programming projects for non-profits, I
-                discovered my passion for using computer science to contribute
-                to my activism work. I'm hoping to use my 7+ years of
+                My path into tech began with building software for non-profits, 
+                where I saw firsthand how impactful code can be. That experience 
+                also inspired me to write a book encouraging students to use their 
+                strengths (like STEM) to make an impact where they are. I'm hoping 
+                to use my 7+ years of
                 programming experience through co-ops, hackathons, and personal
                 projects to inspire growth in the tech field.
-                <br /><br /><br /><br />
-                Now, I'm an innovative Software Engineering student at the
+                <br /><br />
+                I'm an innovative Software Engineering student at the
                 University of Waterloo. I'm currently seeking <b>2026 New Grad Software Engineer</b> positions.
 
                 <!-- <h6>Honours Bachelor of Software Engineering at University of Waterloo<br></h6><br>
@@ -196,8 +204,9 @@
               <!-- </ul>
               </div>
             </div> -->
-            </div>
-          </div>
+            <!-- </div> -->
+          <!-- </div> -->
+           </div>
         </div>
       </section>
       <!-- End About Section -->
@@ -208,7 +217,7 @@
       <section id="facts" class="facts">
         <div class="container" data-aos="fade-up">
           <div class="row">
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
               <div class="count-box">
                 <i class="bi bi-hourglass"></i>
                 <span
@@ -234,7 +243,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
               <div class="count-box">
                 <i class="bi bi-emoji-smile"></i>
                 <span
@@ -247,7 +256,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
               <div class="count-box">
                 <i class="bi bi-award"></i>
                 <span
@@ -289,19 +298,23 @@
                   Google
                 </h3>
                 <h4>Software Engineer Intern</h4>
-                <p><em>May 2025-Present</em></p>
-                <!-- <ul>
+                <p><em>May 2025-Aug 2025</em></p>
+                <ul>
                   <li>
-                    Designed a user-friendly avatar for a TeleRehab app, promoting neurorehabilitation accessibility for stroke survivors.
+                    Engineered a REST API with <b>tag-based filtering</b> for a Google Cloud service handling 10K+ QPS, refactoring the execution pipeline to <b>decouple and parallelize</b> tag-fetching logic for improved performance.
                   </li>
-                </ul> -->
-                <!-- <div>
-                  <h6 class="language">Kotlin</h6>
+                </ul>
+                <div>
                   <h6 class="language">Java</h6>
-                  <h6 class="language">C++</h6>
-                  <h6 class="tool">Unity</h6>
-                  <h6 class="tool">Android SDK</h6>
-                </div> -->
+                  <h6 class="language">TypeScript</h6>
+                  <h6 class="framework">Angular</h6>
+                  <h6 class="framework">Guice</h6>
+                  <h6 class="tool">Google Cloud</h6>
+                  <h6 class="tool">Producer Modules</h6>
+                  <h6 class="tool">Promise Graph</h6>
+                  <h6 class="tool">Protocol Buffers</h6>
+                  <h6 class="tool">Spanner</h6>
+                </div>
               </div>
               <div class="resume-item">
                 <h3>
@@ -344,9 +357,6 @@
                   <li>
                     Developed a <highlight>concurrency-safe lock mechanism</highlight> for shopping carts, decreasing transaction conflicts and ensuring that only one order is processed at a time in a high-traffic e-commerce environment
                   </li>
-                  <li>
-                    Crafted a feature that tracks user activity and sends reminders to complete purchases, boosting revenue by encouraging purchase completion.
-                  </li>
                 </ul>
                 <div>
                   <h6 class="language">Java</h6>
@@ -372,7 +382,7 @@
                 <p><em>Sept 2023-Dec 2023</em></p>
                 <ul>
                   <li>
-                    Built a <highlight>CLI tool</highlight> to replicate game compilation bugs through dynamic <highlight>Azure virtual machine</highlight> provisioning.
+                    Built an internal <highlight>CLI tool</highlight> to replicate game compilation bugs through dynamic <highlight>Azure virtual machine</highlight> provisioning, reducing developer debugging time.
                   </li>
                 </ul>
                 <div>
@@ -400,7 +410,7 @@
                 <p><em>Jan 2023-Apr 2023</em></p>
                 <ul>
                   <li>
-                    Worked on a secure admin reports page with robust <highlight>user authentication </highlight> protocols and aided in the successful launch of popular new features, such as a main admin dashboard on the Data Insights and Security team.
+                    Worked on a secure admin reports page with robust <highlight>user authentication </highlight> protocols and aided in the successful launch of popular new features, such as a main admin dashboard.
                   </li>
                 </ul>
                 <div>
@@ -498,20 +508,42 @@
                   <li>
                     <highlight>Coursework</highlight>
                     <ul>
-                      <li>Data Structures and Algorithms</li>
-                      <li>Foundations of Sequential Programs</li>
-                      <li>Database Management</li>
-                      <li>Operating Systems</li>
-                      <li>Software Testing and Quality Assurance</li>
-                      <li>Concurrent & Parallel Programs</li>
-                      <li>Software Design & Architectures</li>
-                      <li>Computer Networks</li>
+                      <li>Algorithms & Foundations
+                        <ul>
+                          <li>Data Structures and Algorithms</li>
+                          <li>Foundations of Sequential Programs</li>
+                          <li>Software Engineering Principles</li>
+                          <li>Data Abstraction and Implementation</li>
+                        </ul>
+                      </li>
+                      <li>Systems and Architecture
+                        <ul>
+                          <li>Operating Systems</li>
+                          <li>Programming for Performance</li>
+                          <li>Computer Networks</li>
+                          <li>Concurrent & Parallel Programs</li>
+                          <li>Software Design & Architectures</li>
+                        </ul>
+                      </li>
+                      <li>Artificial Intelligence
+                        <ul>
+                          <li>Intro to Artificial Intelligence (AI)</li>
+                          <li>Ethics and Artificial Intelligence</li>
+                        </ul>
+                      </li>
+                      <li>Development Lifecycle
+                        <ul>
+                          <li>Database Management</li>
+                          <li>User Interfaces</li>
+                          <li>Software Project Management, Requirements, and Analysis</li>
+                          <li>Software Testing and Quality Assurance</li>
+                        </ul>
+                      </li>
                     </ul>
                     </li>
                   <li>
                     Participated as the Internal Affairs Officer of
-                    <highlight>UW BluePrint</highlight> and
-                    <highlight>Member of WiCS</highlight>.
+                    <highlight>UW BluePrint</highlight>.
                   </li>
                 </ul>
                 <div>
@@ -652,7 +684,7 @@
             data-aos-delay="200"
           ></div>
 
-          <section id="portfolio-details" class="portfolio-details new3">
+          <!-- <section id="portfolio-details" class="portfolio-details new3">
             <div class="container new">
               <div class="row mt-2">
                 <div class="col-lg-4 new2">
@@ -676,13 +708,9 @@
 
                 <div class="col-md-8">
                   <div class="portfolio-description">
-                    <h2>Machine Learning Trash Sorter</h2>
+                    <h2>Agentic Version Control Protocol</h2>
                     <p>
-                      Architected a Raspberry Pi device with image processing
-                      for a dataset of 3000+ photos. This machine efficiently
-                      sorted, transported, and disposed metal, garbage, and
-                      recycling to their proper wastebins with a elegant system
-                      of two motors with a 94.5% accuracy.
+                      Arabout
                     </p>
                     <a
                       href="https://photos.app.goo.gl/vfsSUjzfvvxU9gr67"
@@ -693,7 +721,7 @@
                 </div>
               </div>
             </div>
-          </section>
+          </section> -->
 
           <section id="portfolio-details" class="portfolio-details new3">
             <div class="container new">
@@ -812,6 +840,50 @@
                       policies.
                     </p>
                     <a href="https://youtu.be/wdr9rMZfFfE" target="_blank"
+                      >View Here!</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+
+          <section id="portfolio-details" class="portfolio-details new3">
+            <div class="container new">
+              <div class="row mt-2">
+                <div class="col-lg-4 new2">
+                  <div class="portfolio-details-slider swiper-container">
+                    <div class="swiper-wrapper align-items-center">
+                      <div class="swiper-slide">
+                        <img src="assets/img/portfolio/stem.jpg" alt="" />
+                      </div>
+
+                      <div class="swiper-slide">
+                        <img src="assets/img/portfolio/machine.png" alt="" />
+                      </div>
+
+                      <div class="swiper-slide">
+                        <img src="assets/img/portfolio/machine2.png" alt="" />
+                      </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                  </div>
+                </div>
+
+                <div class="col-md-8">
+                  <div class="portfolio-description">
+                    <h2>Machine Learning Trash Sorter</h2>
+                    <p>
+                      Architected a Raspberry Pi device with image processing
+                      for a dataset of 3000+ photos. This machine efficiently
+                      sorted, transported, and disposed metal, garbage, and
+                      recycling to their proper wastebins with a elegant system
+                      of two motors with a 94.5% accuracy.
+                    </p>
+                    <a
+                      href="https://photos.app.goo.gl/vfsSUjzfvvxU9gr67"
+                      target="_blank"
                       >View Here!</a
                     >
                   </div>
