--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="sparkles-overlay"></div>
-    <div id="root"></div>
+    <div class="page-scroll hide-scrollbar">
+      <div class="sparkles-overlay"></div>
+      <div id="root"></div>
+    </div>
 
     <!-- React and ReactDOM from CDN -->
     <script
