Testing adding scrollbar back

--- a/test/index.html
+++ b/test/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="page-scroll hide-scrollbar">
+    <div class="page-scroll">
       <div class="sparkles-overlay"></div>
       <div id="root"></div>
     </div>
